Innhold i bookingskjema blir nå tilbakestilt (fjernet) når en sender inn en booking eller krysser ut bookingskjemaet.

--- a/public/ny-booking/ny-booking.view.html
+++ b/public/ny-booking/ny-booking.view.html
@@ -33,7 +33,7 @@
 
     <div class="item-modal modal fade" id="form-modal" tabindex="-1" role="dialog" aria-hidden="true" ng-init="skjema_sendt = false">
         <div class="modal-content" style="width:75%; height: 75%; margin: auto;"> <!-- FJERN CSS NÅR EKSTERN CSS-FIL LEGGES TIL -->
-            <div class="close-modal" data-dismiss="modal" ng-click="emptyFormData(); skjema_sendt = false">
+            <div class="close-modal" data-dismiss="modal" ng-click="emptyFormData(); resetBookingForm(); skjema_sendt = false">
                 <div class="lr">
                     <div class="rl">
                     </div>
