Fjernet melding ang. fjerning av CSS.

--- a/public/ny-booking/ny-booking.view.html
+++ b/public/ny-booking/ny-booking.view.html
@@ -32,7 +32,7 @@
     </div>
 
     <div class="item-modal modal fade" id="form-modal" tabindex="-1" role="dialog" aria-hidden="true" ng-init="skjema_sendt = false">
-        <div class="modal-content col-md-10 col-md-offset-1"> <!-- FJERN CSS NÅR EKSTERN CSS-FIL LEGGES TIL -->
+        <div class="modal-content col-md-10 col-md-offset-1">
             <div class="close-modal" data-dismiss="modal" ng-click="emptyFormData(); resetBookingForm(); skjema_sendt = false">
                 <div class="lr">
                     <div class="rl">
