--- a/public/bookingoversikt/bookingoversikt.view.html
+++ b/public/bookingoversikt/bookingoversikt.view.html
@@ -10,10 +10,9 @@
     <div class="col-md-12 form-inline">
       <select class="form-control" ng-model="valgtStatus" ng-change="filterFunction()">
         <option value="velg">Velg status</option>
-        <option value="aktiv">Aktiv</option>
-        <option value="avvist_av_bookingsjef">Avvist av bookingsjef</option>
-        <option value="avvist_av_manager">Avvist av manager</option>
-        <option value="godkjent_av_bookingsjef">Godkjent av bookingsjef</option>
+        <option value="avvist_av_bookingsjef" ng-hide="currentUserInformation.stilling == 'bookingsjef'">Avvist av bookingsjef</option>
+        <option value="avvist_av_manager" ng-hide="currentUserInformation.stilling == 'bookingansvarlig'">Avvist av bookingansvarlig</option>
+        <option value="godkjent_av_bookingsjef" ng-hide="currentUserInformation.stilling == 'bookingsjef'">Godkjent av bookingsjef</option>
         <option value="ubesvart">Ubesvart</option>
       </select>
       <select class="form-control" ng-model="valgtScene" ng-change="filterFunction()" id="gh">
@@ -32,49 +31,50 @@
         <!--Dato-->
         <div class ="row">
           <div class="col-lg-12 dateDesign">
-            <h2 class="fontSizeDate">{{key}}</h2>
+            <h2 class="fontSizeDate">{{intToDateFunction(key).toDateString()}}</h2>
           </div>
         </div>
         <ul class="list-unstyled">
-          <li ng-repeat="(key, konsert) in value" ng-init="showAvvisForm = false">
+          <li ng-repeat="(key, konsert) in value" ng-init="showAvvisForm = false; showKommentar = false;">
 
-            <div class="row pFontSize">
+            <div class="row pFontSize bookingoObject">
               <div class="col-lg-3 alignMiddle border-Right">
-                <p>{{konsert.artist}}</p>
+                <p>{{konsert.artist}} <span style="opacity: 0.5; font-size: 80%">{{makeStatusPrintable(konsert.status)}}</span></p>  <!--LEGG TIL HARDCODET CSS TIL MANI.CSS -->
               </div>
-              <div class="col-lg-1 alignMiddle textAlign border-Right">
+              <div class="col-lg-2 alignMiddle textAlign border-Right">
                 <p>{{konsert.tid}}</p>
               </div>
-              <div class="col-lg-1 alignMiddle textAlign border-Right">
-                <p>{{konsert.billettpris}}</p>
+              <div class="col-lg-2 alignMiddle textAlign border-Right">
+                <p>{{konsert.pris_medlem}},- / {{konsert.pris_ikke_medlem}},-</p>
               </div>
-              <div class="col-lg-1 alignMiddle textAlign border-Right">
+              <div class="col-lg-2 alignMiddle textAlign">
                 <p>{{konsert.scene}}</p>
-              </div>
-              <div class="col-lg-3 alignMiddle">
-                <p>{{konsert.status}}</p>
               </div>
 
               <!--<p ng-show="(konsert.status == 'avvist_av_bookingsjef') || (konsert.status == 'avvist_av_manager')"><b>Kommentar for avvisning:</b> {{konsert.kommentar_for_avvisning}}</p>-->
               <div class="col-lg-3">
-                <button ng-show="(konsert.status == 'ubesvart') && (currentUserInformation.stilling == 'bookingsjef')" ng-click="updateBookingStatus(key, 'godkjent_av_bookingsjef'); filterFunction()">Godkjenn</button>
-                <button ng-show="(konsert.status == 'ubesvart') && (currentUserInformation.stilling == 'bookingsjef')" ng-click="showAvvisForm = !showAvvisForm">Avvis</button>
+                <button class="btn btn-success" ng-show="(konsert.status == 'ubesvart') && (currentUserInformation.stilling == 'bookingsjef')" ng-click="updateBookingStatus(key, 'godkjent_av_bookingsjef'); filterFunction()">Godkjenn</button>
+                <button class="btn btn-danger" ng-show="(konsert.status == 'ubesvart') && (currentUserInformation.stilling == 'bookingsjef')" ng-click="showAvvisForm = !showAvvisForm">Avvis</button>
                 <button class="btn btn-success" ng-show="(konsert.status == 'godkjent_av_bookingsjef') && (currentUserInformation.stilling == 'bookingansvarlig')" ng-click="updateBookingStatus(key, 'aktiv'); filterFunction()">Legg til arrangemnent</button>
                 <button class="btn btn-danger" ng-show="(konsert.status == 'godkjent_av_bookingsjef') && (currentUserInformation.stilling == 'bookingansvarlig')" ng-click="showAvvisForm = !showAvvisForm">Avvis</button>
-                <form name="avvisForm" ng-show="showAvvisForm == true">
-                  <h3>Fyll ut hvorfor ikke:</h3>
-                  <div class="form-group" show-errors>
-                    <label>Kommentar: <input type="text" class="form-control" name="kommentar" ng-model="avvisning.kommentar" required /></label>
-                  </div>
-                  <button ng-click="avvisBooking(key, avvisning.kommentar); filterFunction()" type="submit" ng-disabled="avvisForm.$invalid" class="btn btn-primary">Send avvisning</button>
-                </form>
-              <br>
+                <button class="btn btn-default" ng-show="((konsert.status == 'avvist_av_bookingsjef' || konsert.status == 'avvist_av_manager') && (showKommentar == false))" ng-click="showKommentar = !showKommentar">Vis kommentar</button>
+                <button class="btn btn-default" ng-show="((konsert.status == 'avvist_av_bookingsjef' || konsert.status == 'avvist_av_manager') && (showKommentar == true))" ng-click="showKommentar = !showKommentar">Skjul kommentar</button>
             </div>
-          </li>
-        </ul>
-      </li>
-    </ul>
-  </div>
+            <form name="avvisForm" ng-show="showAvvisForm == true">
+              <br><br>
+              <div class="form-group" show-errors>
+                <label>Fyll ut hvorfor ikke: <input type="text" class="form-control" name="kommentar" ng-model="avvisning.kommentar" required /></label>
+              </div>
+              <button ng-click="avvisBooking(key, avvisning.kommentar); filterFunction()" type="submit" ng-disabled="avvisForm.$invalid" class="btn btn-primary">Send avvisning</button>
+            </form>
+            <div class="col-lg-12" ng-show="showKommentar == true">
+              <h5><b>Kommentar: </b><i>{{konsert.kommentar_for_avvisning}}</i></h5>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </li>
+  </ul>
 </div>
 
 <form name="bookingForm" ng-show="avvistBooking == true">
