--- a/public/arrangementer/arrangementer.view.html
+++ b/public/arrangementer/arrangementer.view.html
@@ -47,7 +47,7 @@
       </div>
       <ul class="list-unstyled">
         <li ng-repeat="(key, konsert) in value" ng-init="showAvvisForm = false">
-          <div class="row pFontSize">
+          <div class="row pFontSize bookingoObject">
               <div class="col-lg-3 alignMiddle border-Right">
                 <p>{{konsert.artist}}</p>
               </div>
