Endret så søkeresultater havner i en div

--- a/public/arrangementer/arrangementer.view.html
+++ b/public/arrangementer/arrangementer.view.html
@@ -32,10 +32,13 @@
         <option value="Knaus">Knaus</option>
         <option value="Storsalen">Storsalen</option>
       </select>
-  <input type="checkbox" name="vehicle" ng-model="visTidligereArrangementer" ng-change="filterFunction()">Vis tidligere arrangementer
+      <input type="checkbox" name="vehicle" ng-model="visTidligereArrangementer" ng-change="filterFunction()">Vis tidligere arrangementer
+    </div>
+    <div class="col-md-12">
+      <h2 ng-hide="((valgtScene == 'velg') && (valgtSjanger == 'velg') && ((searchingString == undefined) || (searchingString == '')))">Søkeresultat</h2>
+    </div>
   </div>
 
-  <h2 ng-hide="((valgtScene == 'velg') && (valgtSjanger == 'velg') && ((searchingString == undefined) || (searchingString == '')))">Søkeresultat</h2>
 
   <div class="row">
   <ul class="list-unstyled">
