Endret tittel til 'Inkluder tidligere arrangementer'. Endret tekst for etter en booking er sendt inn.

--- a/public/ny-booking/ny-booking.view.html
+++ b/public/ny-booking/ny-booking.view.html
@@ -120,7 +120,8 @@
             <div id="sendt_booking_innhold" class="container" ng-show="skjema_sendt">
               <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                  <h2>Booking har blitt sendt!</h2>
+                  <h2>Booking er sendt for godkjennelse!</h2>
+                  <h2><small>Bookingen vil stå som <i>UBESVART</i> inntil bookingsjef har svart.</small></h2>
                 </div>
               </div>
             </div>
