--- a/public/arrangementer/arrangementer.view.html
+++ b/public/arrangementer/arrangementer.view.html
@@ -32,7 +32,7 @@
         <option value="Knaus">Knaus</option>
         <option value="Storsalen">Storsalen</option>
       </select>
-      <input type="checkbox" name="vehicle" ng-model="visTidligereArrangementer" ng-change="filterFunction()">Vis tidligere arrangementer
+      <input type="checkbox" name="vehicle" ng-model="visTidligereArrangementer" ng-change="filterFunction()"> Inkluder tidligere arrangementer
     </div>
     <div class="col-md-12">
       <h2 ng-hide="((valgtScene == 'velg') && (valgtSjanger == 'velg') && ((searchingString == undefined) || (searchingString == '')))">Søkeresultat</h2>
