--- a/public/arrangementer/arrangementer.view.html
+++ b/public/arrangementer/arrangementer.view.html
@@ -109,15 +109,17 @@
                         </div>
                         <div class="modalRapport" name="modalRapport" ng-show="showRapport == true">
                           <h3>RAPPORT</h3>
-                          <br><br>
+                          <br><br><br>
                           <h2>{{modalInformation.artist}}</h2>
                           <h4>{{intToDateFunction(modalInformation.dato).toDateString()}}</h4>
                           <br><br>
                           <p><b>Antall medlemsbilletter:</b> {{modalInformation.rapport.solgte_billetter_medlem}} stk</p>
                           <p><b>Antall ikke-medlemsbilletter:</b> {{modalInformation.rapport.solgte_billetter_ikke_medlem}} stk</p>
                           <p><b>Scenekapasitet:</b>{{getSceneKapasitet(modalInformation.scene)}} stk</p>
-                          <p><b>Solgte billetter:</b> {{modalInformation.rapport.solgte_billetter_medlem+modalInformation.rapport.solgte_billetter_ikke_medlem}}/{{getSceneKapasitet(modalInformation.scene)}}</p>
+                          <p><b>Solgte billetter:</b> {{modalInformation.rapport.solgte_billetter_medlem+modalInformation.rapport.solgte_billetter_ikke_medlem}}/{{getSceneKapasitet(modalInformation.scene)}} stk</p>
                           <p><b>Kostnad for booking:</b> {{modalInformation.kostnad}},-</p>
+                          <p><b>Pris per medlemsbilletter:</b> {{modalInformation.pris_medlem}},-</p>
+                          <p><b>Pris per ikke-medlemsbillett:</b> {{modalInformation.pris_ikke_medlem}},-</p>
                           <p><b>Tilleggskostnader:</b> {{modalInformation.rapport.tilleggskostnader}},-</p>
                           <p><b>Fortjeneste:</b> {{modalInformation.rapport.profitt}},-</p>
                         </div>
