oppdatert innhold i rapport modal

--- a/public/rapportoversikt/rapportoversikt.view.html
+++ b/public/rapportoversikt/rapportoversikt.view.html
@@ -63,11 +63,19 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <div class="modal-body">
-                          <h2>Rapport for "{{modalInformation.artist}}"</h2></br>
-                          <p><b>Publikumstall:</b> {{modalRapport.publikumstall}}</p>
-                          <p><b>profitt:</b> {{modalRapport.profitt}}</p>
-                          <p><b>tilleggskostnader:</b>{{modalRapport.tilleggskostnader}}</p>
+                        <div class="modalRapport" name="modal">
+                          <h3>RAPPORT</h3>
+                          <br><br>
+                          <h2>{{modalInformation.artist}}</h2>
+                          <h4>{{intToDateFunction(modalInformation.dato).toDateString()}}</h4>
+                          <br><br>
+                          <p><b>Antall medlemsbilletter:</b> {{modalInformation.rapport.solgte_billetter_medlem}} stk</p>
+                          <p><b>Antall ikke-medlemsbilletter:</b> {{modalInformation.rapport.solgte_billetter_ikke_medlem}} stk</p>
+                          <p><b>Scenekapasitet:</b>{{getSceneKapasitet(modalInformation.scene)}} stk</p>
+                          <p><b>Solgte billetter:</b> {{modalInformation.rapport.solgte_billetter_medlem+modalInformation.rapport.solgte_billetter_ikke_medlem}}/{{getSceneKapasitet(modalInformation.scene)}}</p>
+                          <p><b>Kostnad for booking:</b> {{modalInformation.kostnad}},-</p>
+                          <p><b>Tilleggskostnader:</b> {{modalInformation.rapport.tilleggskostnader}},-</p>
+                          <p><b>Fortjeneste:</b> {{modalInformation.rapport.profitt}},-</p>
                         </div>
                     </div>
                 </div>
