--- a/public/rapportoversikt/rapportoversikt.view.html
+++ b/public/rapportoversikt/rapportoversikt.view.html
@@ -37,27 +37,41 @@
       <h2 ng-hide="((valgtScene == 'velg') && (valgtSjanger == 'velg') && ((searchingString == undefined) || (searchingString == '')))">Søkeresultat</h2>
     </div>
   </div>
-  <ul>
-    <li ng-repeat="(key, value) in filtrertListe">
-      <h2>{{intToDateFunction(key).toDateString()}}</h2>
-      <ul>
-        <li ng-repeat="(key, konsert) in value" ng-init="">
-          <p><b>Artist:</b> {{konsert.artist}}</p>
-          <p><b>Scene:</b> {{konsert.scene}}</p>
-          <p><b>Tid:</b> {{konsert.tid}}</p>
-          <p><b>Billettpris:</b> {{konsert.billettpris}}</p>
-          <p><b>Sjanger:</b> {{konsert.sjanger}}</p>
-          <p><b>Status:</b> {{konsert.status}}</p>
-
-            <div class="col-lg-2">
-              <a ng-show="konsert.har_rapport == true" ng-click="updateModal(key, konsert)" href="#information-modal" target="_self" class="modal-link" data-toggle="modal"><button type="button" class="btn btn-danger">Se Rapport</button></a>
+  <div class="row">
+    <div>
+      <ul class="list-unstyled">
+        <li ng-repeat="(key, value) in filtrertListe">
+          <div class ="row">
+            <div class="col-lg-12 dateDesign">
+              <h2 class="fontSizeDate">{{intToDateFunction(key).toDateString()}}</h2>
             </div>
-
-          <br>
+          </div>
+          <ul class="list-unstyled">
+            <li ng-repeat="(key, konsert) in value" ng-init="">
+              <div class="row pFontSize bookingoObject">
+                <div class="col-lg-3 alignMiddle border-Right">
+                  <p>{{konsert.artist}}</p>
+                </div>
+                <div class="col-lg-2 alignMiddle textAlign border-Right">
+                  <p>{{konsert.tid}}</p>
+                </div>
+                <div class="col-lg-2 alignMiddle textAlign border-Right">
+                  <p>{{konsert.scene}}</p>
+                </div>
+                <div class="col-lg-3 alignMiddle textAlign">
+                  <p>{{konsert.pris_medlem}},- / {{konsert.pris_ikke_medlem}},-</p>
+                </div>
+                <!--<p>{{konsert.billettpris}}</p>-->
+                <div class="col-lg-2">
+                  <a ng-show="konsert.har_rapport == true" ng-click="updateModal(key, konsert)" href="#information-modal" target="_self" class="modal-link" data-toggle="modal"><button type="button" class="btn btn-danger">Se Rapport</button></a>
+                </div>
+              </div>
+              <br>
+            </li>
+          </ul>
         </li>
       </ul>
-    </li>
-  </ul>
+  </div>
 </div>
 
 <div class="item-modal modal fade" ng-blur="showRapport = false" id="information-modal" tabindex="-1" role="dialog" aria-hidden="true" ng-init="showRapport = false">
