Laget hele 'ny rapport' siden.

--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,7 @@
                 <li ng-show="(currentUser != null) && ((currentUserInformation.stilling == 'bookingsjef') || (currentUserInformation.stilling == 'bookingansvarlig'))"><a href="/#/bookingoversikt">Bookingoversikt</a></li>
                 <li ng-show="(currentUser != null) && (currentUserInformation.stilling == 'bookingansvarlig')"><a href="/#/ny-booking">+ Ny booking</a></li>
                 <li ng-show="(currentUser != null) && (currentUserInformation.stilling == 'bookingsjef')"><a href="/#/rapportoversikt">Rapporter</a></li>
+                <li ng-show="(currentUser != null) && ((currentUserInformation.stilling == 'bookingansvarlig') || (currentUserInformation.stilling == 'arrangør'))"><a href="/#/ny-rapport">+ Ny rapport</a></li>
               </ul>
             </nav>
           </div>
@@ -81,6 +82,7 @@
     <script src="ny-booking/ny-booking.controller.js" charset="utf-8"></script>
     <script src="bookingoversikt/bookingoversikt.controller.js" charset="utf-8"></script>
      <script src="rapportoversikt/rapportoversikt.controller.js" charset="utf-8"></script>
+     <script src="ny-rapport/ny-rapport.controller.js" charset="utf-8"></script>
     <script src="js/services/firebase.service.js" charset="utf-8"></script>
     <script src="js/services/spotify.service.js" charset="utf-8"></script>
   </body>
