--- a/public/index.html
+++ b/public/index.html
@@ -48,9 +48,9 @@
           <div class="col-md-5">
             <nav class="nav-right">
               <ul>
-                <li ng-show="(currentUser != null) && ((currentUserInformation.stilling == 'bookingsjef') || (currentUserInformation.stilling == 'bookingansvarlig'))"><a href="/#/bookingoversikt">Bookingoversikt</a></li>
+                <li ng-show="(currentUser != null) && ((currentUserInformation.stilling == 'bookingsjef') || (currentUserInformation.stilling == 'bookingansvarlig'))"><a href="/#/bookinger">Bookinger</a></li>
                 <li ng-show="(currentUser != null) && (currentUserInformation.stilling == 'bookingansvarlig')"><a href="/#/ny-booking">+ Ny booking</a></li>
-                <li ng-show="(currentUser != null) && (currentUserInformation.stilling == 'bookingsjef')"><a href="/#/rapportoversikt">Rapporter</a></li>
+                <li ng-show="(currentUser != null) && (currentUserInformation.stilling == 'bookingsjef')"><a href="/#/rapporter">Rapporter</a></li>
                 <li ng-show="(currentUser != null) && ((currentUserInformation.stilling == 'bookingansvarlig') || (currentUserInformation.stilling == 'arrangør'))"><a href="/#/ny-rapport">+ Ny rapport</a></li>
               </ul>
             </nav>
@@ -80,8 +80,8 @@
     <script src="arrangementer/arrangementer.controller.js" charset="utf-8"></script>
     <script src="login/login.controller.js" charset="utf-8"></script>
     <script src="ny-booking/ny-booking.controller.js" charset="utf-8"></script>
-    <script src="bookingoversikt/bookingoversikt.controller.js" charset="utf-8"></script>
-     <script src="rapportoversikt/rapportoversikt.controller.js" charset="utf-8"></script>
+    <script src="bookinger/bookinger.controller.js" charset="utf-8"></script>
+     <script src="rapporter/rapporter.controller.js" charset="utf-8"></script>
      <script src="ny-rapport/ny-rapport.controller.js" charset="utf-8"></script>
     <script src="js/services/firebase.service.js" charset="utf-8"></script>
     <script src="js/services/spotify.service.js" charset="utf-8"></script>
