--- a/public/ny-booking/ny-booking.view.html
+++ b/public/ny-booking/ny-booking.view.html
@@ -23,7 +23,7 @@
               <!-- <a href="#{{artist.id}}" class="modal-link" data-toggle="modal" target="_self">Click</a> -->
             </div>
             <div class="col-md-2">
-              <a ng-click="emptyFormData(); updateFormData(artist)" href="#form-modal" target="_self" class="modal-link" data-toggle="modal"><button type="button" class="btn btn-danger">Oversikt</button></a>
+              <a ng-click="emptyFormData(); updateFormData(artist)" href="#form-modal" target="_self" class="modal-link" data-toggle="modal"><button type="button" class="btn btn-samfundet">Oversikt</button></a>
             </div>
             <br>
           </div>
@@ -111,7 +111,7 @@
                       </div>
                     </div>
                     <div class="col-md-12">
-                      <button ng-click="sendBooking(booking)" type="submit" ng-disabled="bookingForm.$invalid" class="btn btn-primary">Send</button>
+                      <button ng-click="sendBooking(booking)" type="submit" ng-disabled="bookingForm.$invalid" class="btn btn-samfundet">Send</button>
                     </div>
                   </form>
                 </div>
