--- a/public/ny-rapport/ny-rapport.view.html
+++ b/public/ny-rapport/ny-rapport.view.html
@@ -23,7 +23,7 @@
               <p><b>Scene:</b> {{booking.scene}}</p>
             </div>
             <div class="col-md-2">
-              <a ng-click="emptyFormData(); updateFormData(key, booking)" href="#form-modal" target="_self" class="modal-link" data-toggle="modal"><button style="margin-top: 30px;" type="button" class="btn btn-danger">Legg til rapport</button></a>
+              <a ng-click="emptyFormData(); updateFormData(key, booking)" href="#form-modal" target="_self" class="modal-link" data-toggle="modal"><button style="margin-top: 30px;" type="button" class="btn btn-samfundet">Legg til rapport</button></a>
             </div>
             <br>
           </div>
@@ -71,7 +71,7 @@
                     </div>
                     <div class="col-md-12 col-md-offset-5">
                       <br>
-                      <button ng-click="sendBooking(booking)" type="submit" ng-disabled="bookingForm.$invalid" class="btn btn-primary">Send rapport</button>
+                      <button ng-click="sendBooking(booking)" type="submit" ng-disabled="bookingForm.$invalid" class="btn btn-samfundet">Send rapport</button>
                     </div>
                   </form>
                 </div>
