hotfix, modal min-height

--- a/public/rapporter/rapporter.view.html
+++ b/public/rapporter/rapporter.view.html
@@ -74,7 +74,7 @@
 </div>
 
 <div class="item-modal modal fade" ng-blur="showRapport = false" id="information-modal" tabindex="-1" role="dialog" aria-hidden="true" ng-init="showRapport = false">
-        <div class="modal-content" style="width:75%; height: 75%; margin: auto;"> <!-- FJERN CSS NÅR EKSTERN CSS-FIL LEGGES TIL -->
+        <div class="modal-content" style="width:75%; margin: auto; min-height: 75%;"> <!-- FJERN CSS NÅR EKSTERN CSS-FIL LEGGES TIL -->
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
                     <div class="rl">
