uferdig IKKE PUSH, isValidSjanger()

--- a/public/arrangementer/arrangementer.view.html
+++ b/public/arrangementer/arrangementer.view.html
@@ -8,22 +8,23 @@
     <div class="col-md-12 form-inline">
       <select class="form-control" ng-model="valgtSjanger" ng-change="filterFunction()">
         <option value="velg">Velg sjanger</option>
-        <option value="Alternativ">Alternativ</option>
-        <option value="Blues">Blues</option>
-        <option value="Country">Country</option>
-        <option value="Dance">Dance</option>
-        <option value="Elektronisk">Elektronisk</option>
-        <option value="Folk">Folk</option>
-        <option value="Hip Hop">Hip Hop</option>
-        <option value="Indie">Indie</option>
-        <option value="Jazz">Jazz</option>
-        <option value="Klassisk">Klassisk</option>
-        <option value="Norsk">Norsk</option>
-        <option value="Opera">Opera</option>
-        <option value="Pop">Pop</option>
+        <option value="alternative">Alternativ</option>
+        <option value="blues">Blues</option>
+        <option value="country">Country</option>
+        <option value="dance">Dance</option>
+        <option value="electronic">Elektronisk</option>
+        <option value="folk">Folk</option>
+        <option value="hip">Hip Hop</option>
+        <option value="indie">Indie</option>
+        <option value="jazz">Jazz</option>
+        <option value="classic">Klassisk</option>
+        <option value="norwegian">Norsk</option>
+        <option value="opera">Opera</option>
+        <option value="pop">Pop</option>
+        <option value="rap">Rap</option>
         <option value="R&amp;B">R&amp;B</option>
-        <option value="Reggae">Reggae</option>
-        <option value="Rock">Rock</option>
+        <option value="reggae">Reggae</option>
+        <option value="rock">Rock</option>
       </select>
       <select class="form-control" ng-model="valgtScene" ng-change="filterFunction()">
         <option value="velg">Velg scene</option>
